addons/k8s-gatekeeper/templates/medtech-iso_27001_isms_scope_and_controls-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: medtech-iso_27001_isms_scope_and_controls
  annotations:
    rulehub.id: medtech.iso_27001_isms_scope_and_controls
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: MedtechIso_27001_isms_scope_and_controlsConstraint
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            enabled:
              type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.medtech.iso_27001_isms_scope_and_controls
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "medtech.iso_27001_isms_scope_and_controls: example violation"
      }
